--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
         <img src="resources/ceylon-logo-24.png" title="Ceylon">
         <img src="resources/chapel-logo-24.png" title="Chapel">
         <img src="resources/clojure-logo-24.png" title="Clojure">
+        <img src="resources/cpp-logo-24.png" title="C++">
         <img src="resources/coffeescript-logo-24.png" title="CoffeeScript">
         <img src="resources/dart-logo-24.png" title="Dart">
         <img src="resources/elixir-logo-24.png" title="Elixir">
