Add new logos to site

--- a/index.html
+++ b/index.html
@@ -359,6 +359,8 @@
         <img src="resources/erlang-logo-24.png" title="Erlang">
         <img src="resources/fsharp-logo-24.png" title="F#">
         <img src="resources/go-logo-24.png" title="Go">
+        <img src="resources/idris-logo-24.png" title="Idris">
+        <img src="resources/io-logo-24.png" title="Io">
         <img src="resources/haskell-logo-24.png" title="Haskell">
         <img src="resources/java-logo-24.png" title="Java">
         <img src="resources/javascript-logo-24.png" title="JavaScript">
