--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
         <img src="resources/elixir-logo-24.png" title="Elixir">
         <img src="resources/elm-logo-24.png" title="Elm">
         <img src="resources/erlang-logo-24.png" title="Erlang">
+        <img src="resources/factor-logo-24.png" title="Factor">
         <img src="resources/fsharp-logo-24.png" title="F#">
         <img src="resources/go-logo-24.png" title="Go">
         <img src="resources/idris-logo-24.png" title="Idris">
