More additional resources

--- a/index.html
+++ b/index.html
@@ -58,9 +58,6 @@
       dd {
         font-style: italic;
       }
-      ul li {
-        color: #a20841;
-      }
       ul li span {
         color: #221c22;
       }
@@ -327,6 +324,36 @@
       programming languages covered in their respective README.md files.
       See something wrong or want to add anything? Send us a pull request.</p>
 
+      <p>There are, however, many resources not tied to any particular
+      language that you may enjoy. Here are just a few:</p>
+
+      <ul>
+        <li><a href="https://learnxinyminutes.com/">Learn X in Y Minutes</a>
+        <li><a href="http://rigaux.org/language-study/syntax-across-languages.html">Syntax Across Languages</a>
+        <li><a href="https://en.wikipedia.org/wiki/Comparison_of_programming_languages">Wikipedia Programming Language Comparisons</a>
+        <li><a href="http://hyperpolyglot.org/">Hyperpolyglot</a>
+      </ul>
+
+      <p>In addition, you might want to visit a few languages not covered in the book:</p>
+      <ul>
+        <li><a href="https://github.com/damelang/nile">Nile</a>
+        <li><a href="https://scratch.mit.edu/">Scratch</a>
+        <li><a href="http://snap.berkeley.edu/">Snap!</a>
+        <li><a href="https://ioke.org/">Ioke</a>
+        <li><a href="http://www.jsoftware.com/">J</a>
+        <li><a href="https://racket-lang.org/">Racket</a>
+        <li><a href="http://hacklang.org/">Hack</a>
+        <li><a href="https://dlang.org/">D</a>
+        <li><a href="http://ceylon-lang.org/">Ceylon</a>
+        <li><a href="https://boo-language.github.io/">Boo</a>
+        <li><a href="http://www.zimbu.org/">Zimbu</a>
+        <li><a href="http://fantom.org/">Fantom</a>
+        <li><a href="http://opalang.org/">Opa</a>
+        <li><a href="https://wiki.gnome.org/Projects/Vala">Vala</a>
+        <li><a href="http://docs.yoyogames.com/source/dadiospice/002_reference/001_gml%20language%20overview/">GML</a>
+        <li><a href="http://www.purescript.org/">PureScript</a>
+        <li><a href="http://nemerle.org/About">Nemerle</a>
+      </ul>
 
       <div class="sectionheading">Errata</div>
 
