Add new language logos to footer

--- a/index.html
+++ b/index.html
@@ -401,14 +401,18 @@
         <img src="resources/lolcode-logo-24.png" title="LOLCODE">
         <img src="resources/lua-logo-24.png" title="Lua">
         <img src="resources/nasm-logo-24.png" title="nasm">
+        <img src="resources/nemerle-logo-24.png" title="nemerle">
         <img src="resources/nim-logo-24.png" title="Nim">
         <img src="resources/ocaml-logo-24.png" title="OCaml">
         <img src="resources/perl-logo-24.png" title="Perl">
+        <img src="resources/purescript-logo-24.png" title="PureScript">
         <img src="resources/python-logo-24.png" title="Python">
         <img src="resources/r-logo-24.png" title="R">
+        <img src="resources/racket-logo-24.png" title="Racket">
         <img src="resources/ruby-logo-24.png" title="Ruby">
         <img src="resources/rust-logo-24.png" title="Rust">
         <img src="resources/scala-logo-24.png" title="Scala">
+        <img src="resources/scratch-logo-24.png" title="Scratch">
         <img src="resources/smalltalk-logo-24.png" title="Smalltalk">
         <img src="resources/sml-alt-logo-24.png" title="Standard ML">
         <img src="resources/swift-logo-24.png" title="Swift">
