--- a/index.html
+++ b/index.html
@@ -335,24 +335,35 @@
       </ul>
 
       <p>In addition, you might want to visit a few languages not covered in the book:</p>
-      <ul>
-        <li><a href="https://github.com/damelang/nile">Nile</a>
-        <li><a href="https://scratch.mit.edu/">Scratch</a>
-        <li><a href="http://snap.berkeley.edu/">Snap!</a>
-        <li><a href="https://ioke.org/">Ioke</a>
-        <li><a href="http://www.jsoftware.com/">J</a>
-        <li><a href="https://racket-lang.org/">Racket</a>
-        <li><a href="http://hacklang.org/">Hack</a>
-        <li><a href="https://dlang.org/">D</a>
-        <li><a href="http://ceylon-lang.org/">Ceylon</a>
-        <li><a href="https://boo-language.github.io/">Boo</a>
-        <li><a href="http://www.zimbu.org/">Zimbu</a>
-        <li><a href="http://fantom.org/">Fantom</a>
-        <li><a href="http://opalang.org/">Opa</a>
-        <li><a href="https://wiki.gnome.org/Projects/Vala">Vala</a>
-        <li><a href="http://docs.yoyogames.com/source/dadiospice/002_reference/001_gml%20language%20overview/">GML</a>
-        <li><a href="http://www.purescript.org/">PureScript</a>
-        <li><a href="http://nemerle.org/About">Nemerle</a>
+
+      <p style="text-align:center">
+        <a href="https://github.com/damelang/nile">Nile</a> &bull;
+        <a href="https://scratch.mit.edu/">Scratch</a> &bull;
+        <a href="http://snap.berkeley.edu/">Snap!</a> &bull;
+        <a href="https://ioke.org/">Ioke</a> &bull;
+        <a href="http://www.jsoftware.com/">J</a> &bull;
+        <a href="http://www.selflanguage.org/">Self</a> &bull;
+        <a href="https://racket-lang.org/">Racket</a> &bull;
+        <a href="https://dlang.org/">D</a> &bull;
+        <a href="http://ceylon-lang.org/">Ceylon</a> &bull;
+        <a href="https://kotlinlang.org/">Kotlin</a> &bull;
+        <a href="https://boo-language.github.io/">Boo</a> &bull;
+        <a href="http://www.zimbu.org/">Zimbu</a> &bull;
+        <a href="http://fantom.org/">Fantom</a> &bull;
+        <a href="http://opalang.org/">Opa</a> &bull;
+        <a href="https://wiki.gnome.org/Projects/Vala">Vala</a> &bull;
+        <a href="http://docs.yoyogames.com/source/dadiospice/002_reference/001_gml%20language%20overview/">GML</a> &bull;
+        <a href="http://www.falconpl.org/">Falcon</a> &bull;
+        <a href="http://nim-lang.org/">Nim</a> &bull;
+        <a href="http://nemerle.org/About">Nemerle</a> &bull;
+        <a href="http://kittenlang.org/">Kitten</a> &bull;
+        <a href="https://mercurylang.org/">Mercury</a> &bull;
+        <a href="http://www.wakelang.com/">Wake</a> &bull;
+        <a href="http://roy.brianmckenna.org/">Roy</a> &bull;
+        <a href="http://www.impredicative.com/ur/">Ur</a> &bull;
+        <a href="http://www.mathstat.dal.ca/~selinger/quipper/">Quipper</a> &bull;
+        <a href="http://www.purescript.org/">PureScript</a> &bull;
+        <a href="https://quorumlanguage.com/">Quorum<a>
       </ul>
 
       <div class="sectionheading">Errata</div>
