Add new logos to index page

--- a/index.html
+++ b/index.html
@@ -399,6 +399,7 @@
         <img src="resources/elm-logo-24.png" title="Elm">
         <img src="resources/erlang-logo-24.png" title="Erlang">
         <img src="resources/factor-logo-24.png" title="Factor">
+        <img src="resources/falcon-logo-24.png" title="Falcon">
         <img src="resources/fsharp-logo-24.png" title="F#">
         <img src="resources/go-logo-24.png" title="Go">
         <img src="resources/idris-logo-24.png" title="Idris">
@@ -408,9 +409,11 @@
         <img src="resources/javascript-logo-24.png" title="JavaScript">
         <img src="resources/julia-logo-24.png" title="Julia">
         <img src="resources/k-logo-24.png" title="K">
+        <img src="resources/kitten-logo-24.png" title="Kitten">
         <img src="resources/kotlin-logo-24.png" title="Kotlin">
         <img src="resources/lolcode-logo-24.png" title="LOLCODE">
         <img src="resources/lua-logo-24.png" title="Lua">
+        <img src="resources/mercury-logo-24.png" title="Mercury">
         <img src="resources/nasm-logo-24.png" title="nasm">
         <img src="resources/nemerle-logo-24.png" title="nemerle">
         <img src="resources/nim-logo-24.png" title="Nim">
