Cleaner book description

--- a/index.html
+++ b/index.html
@@ -136,15 +136,15 @@
         &copy; 2017 <a href="https://www.crcpress.com/">CRC Press</a>
       </div>
 
-      <p class="summary">This text covers all the usual programming language
-      concepts, including binding, scope, typing, parameterization, modularity, concurrency,
-      and meta&shy;programming, not through a dry explanation of each topic, but rather
-      within the context of whole-language overviews with plenty of runnable
-      example scripts. We aim to help developers learn a bit of theory, and
-      introduce students to a number of modern languages. All of the source
-      code for the book&rsquo;s examples, as well as number of bonus scripts,
-      are found in <a href="https://github.com/rtoal/ple">a GitHub
-      repository</a>.</p>
+      <p class="summary">This text covers the standard programming language
+      concepts, including binding, scope, typing, parameterization, modularity,
+      concurrency, and meta&shy;programming, not with a list of explanations
+      of each topic, but rather within the context of whole-language overviews
+      with plenty of runnable example programs. We aim to help developers
+      learn a bit of theory, and introduce students to a number of modern
+      languages. All of the source code for the book&rsquo;s examples, as
+      well as number of bonus scripts, are found in
+      <a href="https://github.com/rtoal/ple">a GitHub repository</a>.</p>
 
 
       <div class="sectionheading">Contents</div>
