Add some languages to the overviews app;

--- a/overviews.html
+++ b/overviews.html
@@ -53,12 +53,12 @@
       </div>
     </div>
     <script>
-      var languages = ("ada apl bash c ceylon chapel clojure " +
-        "coffeescript cpp dart elixir elm erlang factor falcon " +
-        "fsharp go haskell idris io java javascript julia k " +
+      var languages = ("ada apl bash boo c ceylon chapel clojure " +
+        "coffeescript cpp d dart elixir elm erlang factor falcon " +
+        "fsharp go gosu haskell idris io java javascript julia k " +
         "kitten kotlin lolcode lua mercury nasm nemerle nim " +
         "ocaml perl purescript python r racket ruby rust scala " +
-        "scratch smalltalk sml-alt swift"
+        "scratch smalltalk sml swift"
       ).split(" ");
       var sidebar = document.getElementById("sidebar");
       for (let i = 0; i < languages.length; i++) {
