Add D and Boo logos

--- a/index.html
+++ b/index.html
@@ -388,12 +388,14 @@
         <img src="resources/ada-logo-24.png" title="Ada">
         <img src="resources/apl-logo-24.png" title="APL">
         <img src="resources/bash-logo-24.png" title="Bash">
+        <img src="resources/boo-logo-24.png" title="Boo">
         <img src="resources/c-logo-24.png" title="C">
         <img src="resources/ceylon-logo-24.png" title="Ceylon">
         <img src="resources/chapel-logo-24.png" title="Chapel">
         <img src="resources/clojure-logo-24.png" title="Clojure">
         <img src="resources/cpp-logo-24.png" title="C++">
         <img src="resources/coffeescript-logo-24.png" title="CoffeeScript">
+        <img src="resources/d-logo-24.png" title="D">
         <img src="resources/dart-logo-24.png" title="Dart">
         <img src="resources/elixir-logo-24.png" title="Elixir">
         <img src="resources/elm-logo-24.png" title="Elm">
@@ -428,7 +430,7 @@
         <img src="resources/scala-logo-24.png" title="Scala">
         <img src="resources/scratch-logo-24.png" title="Scratch">
         <img src="resources/smalltalk-logo-24.png" title="Smalltalk">
-        <img src="resources/sml-alt-logo-24.png" title="Standard ML">
+        <img src="resources/sml-logo-24.png" title="Standard ML">
         <img src="resources/swift-logo-24.png" title="Swift">
       </div>
     </div>
