More logos in readme

--- a/index.html
+++ b/index.html
@@ -394,6 +394,7 @@
         <img src="resources/chapel-logo-24.png" title="Chapel">
         <img src="resources/clojure-logo-24.png" title="Clojure">
         <img src="resources/cpp-logo-24.png" title="C++">
+        <img src="resources/csharp-logo-24.png" title="C#">
         <img src="resources/coffeescript-logo-24.png" title="CoffeeScript">
         <img src="resources/d-logo-24.png" title="D">
         <img src="resources/dart-logo-24.png" title="Dart">
