Start additional exercises

--- a/index.html
+++ b/index.html
@@ -379,9 +379,10 @@
       explorations&rdquo; in which you find or install compilers or interpreters,
       investigate aspects of a language not covered in the chapter proper,
       muse about language designers&rsquo; intents, and try your hand at
-      both large and small programming tasks. We&rsquo;ll provide
-      a page with a few more. (It&rsquo;s not yet begun, however.) If you
-      would like to contribute additional exercises, submit a pull request.
+      both large and small programming tasks. For those wishing more practice
+      or are looking to explore many programming langauge topics not covered in
+      the text, we&rsquo;ve provided <a href="more-exercises.html">a page
+      with a few more</a>.</p>
 
 
       <div id="bottomline">
